<resources>
    <string name="appVersion">v1.2.1</string>
    <string name="appVersionCode">6</string>
    <string name="app_name">WTP Estimation Tools</string>
    <string name="action_settings">Settings</string>
    <string name="boilerWaterButtonText">Steam Boiler Product Estimates</string>
    <string name="coolingWaterButtonText">Cooling Water Product Estimates</string>
    <string name="boilerLabel">Steam Boiler</string>
    <string name="coolingLabel">Cooling System</string>
    <string name="solidLabel">Solid Chemicals</string>
    <string name="liquidLabel">Liquid Chemicals</string>
    <string name="helpLabel">Help</string>
    <string name="aboutUsLabel">About Us</string>
    <string name="contactUsLabel">Contact Us</string>
    <string name="space"></string>
    <string name="action_estimate">Estimate</string>
    <string name="boilerInputActivity">Steam Boiler Parameters</string>
    <string name="siteNameLabel">Site Name</string>
    <string name="sitePrompt">Name: </string>
    <string name="siteHint">Enter site name</string>
    <string name="inputError">Please enter all data</string>
    <string name="boilerDutyLabel">Boiler Duty</string>
    <string name="summerTitle">Summer</string>
    <string name="winterTitle">Winter</string>
    <string name="steamPrompt">Steam (lb/hr)</string>
    <string name="steamSumHint">Summer steam</string>
    <string name="steamWinHint">Winter steam</string>
    <string name="hoursPrompt">Hours/Day</string>
    <string name="hoursSumHint">Summer hours</string>
    <string name="hoursWinHint">Winter hours</string>
    <string name="daysPrompt">Days/Week</string>
    <string name="daysSumHint">Summer days</string>
    <string name="daysWinHint">Winter days</string>
    <string name="weeksPrompt">Weeks/Year</string>
    <string name="weeksSumHint">Summer weeks</string>
    <string name="weeksWinHint">Winter weeks</string>
    <string name="feedWaterLabel">Feed Water</string>
    <string name="TDSPrompt">TDS</string>
    <string name="TDSHint">TDS</string>
    <string name="TDSUnit">ppm</string>
    <string name="MAlkPrompt">M Alk</string>
    <string name="MAlkHint">M Alk</string>
    <string name="MAlkUnit">ppm</string>
    <string name="pHPrompt">pH</string>
    <string name="pHHint">pH</string>
    <string name="pHUnit"></string>
    <string name="CaHardnessPrompt">Ca Hardness</string>
    <string name="CaHardnessHint">Ca Hardness</string>
    <string name="CaHardnessUnit">ppm</string>
    <string name="tempPrompt">Temperature</string>
    <string name="tempHint">Temperature</string>
    <string name="tempUnit">&#176;C</string>
    <string name="boilerDetailsLabel">Boiler Details</string>
    <string name="maxTDSPrompt">Max TDS</string>
    <string name="maxTDSHint">Max TDS</string>
    <string name="maxTDSUnit">ppm</string>
    <string name="minSulphitePrompt">Min Sulphite Reserve</string>
    <string name="minSulphiteHint">min Sulphite reserve</string>
    <string name="minSulphiteUnit">ppm</string>
    <string name="minCausticPrompt">Min Caustic Alkalinity</string>
    <string name="minCausticHint">Min Caustic Alkalinity</string>
    <string name="minCausticUnit"></string>
    <string name="boilerSolidsResultsActivity">Steam Boiler Estimates (Solids)</string>
    <string name="action_email">Email</string>
    <string name="productTitle">Product</string>
    <string name="dosageTitle">Dosage</string>
    <string name="dosageUnits">(g/m&#179;)</string>
    <string name="usageTitle">Usage</string>
    <string name="usageUnits">(kg/yr)</string>
    <string name="ss1294Title">WTP SS1294</string>
    <string name="ss1294Description">Tannin based oxygen scavenger</string>
    <string name="ss1295Title">WTP SS1295</string>
    <string name="ss1295Description">All in One - Sulphite</string>
    <string name="ss1350Title">WTP SS1350</string>
    <string name="ss1350Description">All in One - Sulphite, no caustic</string>
    <string name="ss1095Title">WTP SS1095</string>
    <string name="ss1095Description">Sodium Sulphite</string>
    <string name="ss1995Title">WTP SS1995</string>
    <string name="ss1995Description">Alkalinity Builder</string>
    <string name="ss2295Title">WTP SS2295</string>
    <string name="ss2295Description">Phosphate/Polymer</string>
    <string name="ss8985Title">WTP SS8985</string>
    <string name="ss8985Description">Amines</string>
    <string name="boilerLiquidsResultsActivity">Steam Boiler Estimates (Liquids)</string>
    <string name="s5Title">WTP S5</string>
    <string name="s5Description">17% as Sodium bisulphite/catalysed</string>
    <string name="s10Title">WTP S10</string>
    <string name="s10Description">35% as Sodium bisulphite/catalysed</string>
    <string name="s123Title">WTP S123</string>
    <string name="s123Description">All in One Low Sulphite</string>
    <string name="s125Title">WTP S125</string>
    <string name="s125Description">All in One High Sulphite</string>
    <string name="s26Title">WTP S26</string>
    <string name="s26Description">25% tannin/caustic</string>
    <string name="s28Title">WTP S28</string>
    <string name="s28Description">25% tannin</string>
    <string name="s19Title">WTP S19</string>
    <string name="s19Description">Alkalinity Builder</string>
    <string name="s456Title">WTP S456</string>
    <string name="s456Description">Polymer blend</string>
    <string name="s124Title">WTP S124</string>
    <string name="s124Description">All in one Tannin Product</string>
    <string name="s22Title">WTP S22</string>
    <string name="s22Description">Phosphate/Polymer</string>
    <string name="s23Title">WTP S23</string>
    <string name="s23Description">Phosphate/Polymer/Caustic</string>
    <string name="s88Title">WTP S88</string>
    <string name="s88Description">Morpholine/Cyclohex</string>
    <string name="s95Title">WTP S95</string>
    <string name="s95Description">Filming and neutralising amines</string>
    <string name="coolingInputActivity">Cooling Water Parameters</string>
    <string name="criteriaLabel">Criteria</string>
    <string name="circulationPrompt">Circulation</string>
    <string name="circulationHint">circulation</string>
    <string name="circulationUnit">m&#179;/hr</string>
    <string name="deltaTPrompt">∆T</string>
    <string name="deltaTHint">∆T</string>
    <string name="deltaTUnit">&#176;C</string>
    <string name="sumpVolumePrompt">Sump Volume</string>
    <string name="sumpVolumeHint">Sump Volume</string>
    <string name="sumpVolumeUnit">m&#179;</string>
    <string name="sysVolumePrompt">Sys Volume</string>
    <string name="sysVolumeHint">Sys Volume</string>
    <string name="sysVolumeUnit">m&#179;</string>
    <string name="concFactorPrompt">Conc Factor</string>
    <string name="concFactorHint">Conc Factor</string>
    <string name="concFactorUnit"></string>
    <string name="makeupLabel">Makeup Water Quality</string>
    <string name="totalHardnessPrompt">Total Hardness</string>
    <string name="totalHardnessHint">Total Hardness</string>
    <string name="totalHardnessUnit"></string>
    <string name="chloridesPrompt">Chlorides</string>
    <string name="chloridesHint">Chlorides</string>
    <string name="chloridesUnit"></string>
    <string name="coolingDutyLabel">Duty/Operation</string>
    <string name="hoursHint">hours/day</string>
    <string name="daysHint">days/week</string>
    <string name="weeksHint">weeks/year</string>
    <string name="coolingSolidsResultsActivity">Cooling Water Estimates (Solids)</string>
    <string name="costKgTitle">Cost/kg</string>
    <string name="costKgUnits">(£/kg)</string>
    <string name="costAnnumTitle">Cost/Yr</string>
    <string name="costAnnumUnits">(£/yr)</string>
    <string name="inhibitorTitle">Inhibitors</string>
    <string name="hs2097Title">WTP HS2097</string>
    <string name="hs2097Description">All organic scale inhibitor</string>
    <string name="hs4390Title">WTP HS4390</string>
    <string name="hs4390Description">Molybdate Phosphorate scale/corrosion inhibitor</string>
    <string name="hs3990Title">WTP HS3990</string>
    <string name="hs3990Description">Silicate / Phosphonate corrosion inhibitor</string>
    <string name="biocidesTitle">Biocides</string>
    <string name="cs4400Title">WTP CS4400</string>
    <string name="cs4400Description">Biocide + Dispersant</string>
    <string name="cs4802Title">WTP CS4802</string>
    <string name="cs4802Description">Bronopol</string>
    <string name="cs4490Title">WTP CS4490</string>
    <string name="cs4490Description">DBNPA</string>
    <string name="scg1Title">WTP SCG1</string>
    <string name="scg1Description">SDIC</string>
    <string name="cschlorTitle">WTP CS Chlor</string>
    <string name="cschlorDescription">Cal Hypo Tablet</string>
    <string name="c42tTitle">WTP C42T</string>
    <string name="c42tDescription">Bromine tablets (brominator)</string>
    <string name="coolingLiquidsResultsActivity">Cooling Estimates (Liquids)</string>
    <string name="nOxBiocides01">Biocides</string>
    <string name="nOxBiocides02">Non-Oxidising</string>
    <string name="doseRate">Dose Rate</string>
    <string name="doseRateUnits">mg/L in system</string>
    <string name="doseRateAnnum01">Litres/Annum</string>
    <string name="doseRateAnnum02">Estimated</string>
    <string name="minDoseTitle">Minimum Dose</string>
    <string name="minDoseUnits">ppm</string>
    <string name="oxBiocides01">Biocides</string>
    <string name="oxBiocides02">Oxidising</string>
    <string name="oxHdr01">Minimum free</string>
    <string name="oxHdr02">Halogen</string>
    <string name="halogenDose">1&#8211;3 ppm</string>
    <string name="oxDescription">As required by L8</string>
    <string name="h207Title">WTP H207</string>
    <string name="h207Description">Scale inhibitor</string>
    <string name="h2073Title">WTP H2073</string>
    <string name="h2073Description">Scale inhibitor</string>
    <string name="h280Title">WTP H280</string>
    <string name="h280Description">Scale/corrosion inhibitor</string>
    <string name="h2805Title">WTP H2805</string>
    <string name="h2805Description">Scale/corrosion inhibitor</string>
    <string name="h390Title">WTP H390</string>
    <string name="h390Description">Corrosion inhibitor</string>
    <string name="h3905Title">WTP H3095</string>
    <string name="h3905Description">Corrosion inhibitor</string>
    <string name="h391Title">WTP H391</string>
    <string name="h391Description">Corrosion inhibitor</string>
    <string name="h423Title">WTP H423</string>
    <string name="h423Description">Scale/corrosion inhibitor</string>
    <string name="h425Title">WTP H425</string>
    <string name="h425Description">Corrosion inhibitor</string>
    <string name="h4255Title">WTP H4255</string>
    <string name="h4255Description">Corrosion inhibitor</string>
    <string name="h535Title">WTP H535</string>
    <string name="h535Description">Scale/corrosion inhibitor</string>
    <string name="h874Title">WTP H874</string>
    <string name="h874Description">Scale inhibitor</string>
    <string name="c31Title">WTP C31 IsoT</string>
    <string name="c31Description">Isothiazalones</string>
    <string name="c32Title">WTP C32 IsoT</string>
    <string name="c32Description">Isothiazalones</string>
    <string name="c44Title">WTP C44 DBNPA</string>
    <string name="c44Description">DBNPA</string>
    <string name="c45Title">WTP C45 Glut</string>
    <string name="c45Description">Glutaraldehyde</string>
    <string name="c48Title">WTP C48 BNPD</string>
    <string name="c48Description">Bronopol BNPD</string>
    <string name="c51Title">WTP C51 THPS</string>
    <string name="c51Description">THPS</string>
    <string name="c52Title">WTP C52 Quat</string>
    <string name="c52Description">BAC Quat</string>
    <string name="c54Title">WTP C54 Poly Quat</string>
    <string name="c54Description">Poly Quat</string>
    <string name="c58Title">WTP C58 DDMQ</string>
</resources>